--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "dat.gui": "^0.7.9",
     "lodash-es": "^4.17.21",
     "three": "^0.139.2"
   }
