--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "dat.gui": "^0.7.9",
     "lodash-es": "^4.17.21",
+    "simplex-noise": "^3.0.1",
     "three": "^0.139.2"
   }
 }
